bk_ida/gccida/c3/walk_tree
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree-inline.c:1571:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree-inline.c:1584:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree-inline.c:1617:27: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
v19 = statement_code_p( ( tree_code)v10); 
                          ^~~~~~~~~
                          tree_cons
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree-inline.c:1617:37: error: expected ')'
v19 = statement_code_p( ( tree_code)v10); 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree-inline.c:1617:23: note: to match this '('
v19 = statement_code_p( ( tree_code)v10); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree-inline.c:1618:98: error: expected expression
if ( ( _DWORD)v10 != 2 && !v19 && !lang_hooks_0.tree_inlining.tree_chain_matters_p( ( tree_node *)*v8) ) 
                                                                                                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree-inline.c:1618:87: error: use of undeclared identifier 'tree_node'
if ( ( _DWORD)v10 != 2 && !v19 && !lang_hooks_0.tree_inlining.tree_chain_matters_p( ( tree_node *)*v8) ) 
                                                                                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree-inline.c:1618:36: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
if ( ( _DWORD)v10 != 2 && !v19 && !lang_hooks_0.tree_inlining.tree_chain_matters_p( ( tree_node *)*v8) ) 
                                   ^~~~~~~~~~~~
                                   lang_hooks
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree-inline.c:1635:26: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
if ( statement_code_p( ( tree_code)*( ( unsigned __int8 *)*v8 + 16)) && ( *( ( _BYTE *)*v8 + 19) & 4) == 0 ) 
                         ^~~~~~~~~
                         tree_cons
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree-inline.c:1635:36: error: invalid operands to binary expression ('tree (tree, tree, tree)' (aka 'union tree_node *(union tree_node *, union tree_node *, union tree_node *)') and 'unsigned char *')
if ( statement_code_p( ( tree_code)*( ( unsigned __int8 *)*v8 + 16)) && ( *( ( _BYTE *)*v8 + 19) & 4) == 0 ) 
                       ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree-inline.c:1639:26: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
rtl_op = first_rtl_op( ( tree_code)v10); 
                         ^~~~~~~~~
                         tree_cons
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree-inline.c:1639:36: error: expected ')'
rtl_op = first_rtl_op( ( tree_code)v10); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree-inline.c:1639:22: note: to match this '('
rtl_op = first_rtl_op( ( tree_code)v10); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree-inline.c:1655:27: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
if ( !statement_code_p( ( tree_code)v10) ) 
                          ^~~~~~~~~
                          tree_cons
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree-inline.c:1655:37: error: expected ')'
if ( !statement_code_p( ( tree_code)v10) ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree-inline.c:1655:23: note: to match this '('
if ( !statement_code_p( ( tree_code)v10) ) 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree-inline.c:1690:63: error: expected expression
v22 = lang_hooks_0.tree_inlining.walk_subtrees( ( tree_node **)v8, &subtrees, func, v20, htab_); 
                                                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree-inline.c:1690:51: error: use of undeclared identifier 'tree_node'
v22 = lang_hooks_0.tree_inlining.walk_subtrees( ( tree_node **)v8, &subtrees, func, v20, htab_); 
                                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/tree-inline.c:1690:7: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
v22 = lang_hooks_0.tree_inlining.walk_subtrees( ( tree_node **)v8, &subtrees, func, v20, htab_); 
      ^~~~~~~~~~~~
      lang_hooks
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/walk_tree/src/obj/tree-inline.o] Error 1
